Заглушка карты, страница объявлений

--- a/src/app/pages/advertisements-page/advertisements-page.html
+++ b/src/app/pages/advertisements-page/advertisements-page.html
@@ -1,1 +1,40 @@
-<p>advertisements-page works!</p>
+<div class="page-container">
+  <div class="categories-tree">
+    <div
+      role="tree"
+      [tuiTreeController]="true"
+    >
+      <tui-tree-item>
+        Fruits
+        <tui-tree-item>
+          Apples
+          <tui-tree-item>Granny Smith</tui-tree-item>
+          <tui-tree-item>Red Delicious</tui-tree-item>
+        </tui-tree-item>
+        <tui-tree-item>Oranges</tui-tree-item>
+      </tui-tree-item>
+      <tui-tree-item>
+        Animals
+        <tui-tree-item>Cats</tui-tree-item>
+        <tui-tree-item>Dogs</tui-tree-item>
+      </tui-tree-item>
+    </div>
+  </div>
+
+  <div class="cards-container">
+    @if (newAdverticements.length > 0) {
+      <div class="cards-container">
+        @for (ad of newAdverticements; track ad.id) {
+          <app-adverticement-card [advertisement]="ad" />
+        }
+      </div>
+    } @else {
+      <div class="loading-state">
+        <p>Загрузка объявлений...</p>
+      </div>
+    }
+  </div>
+</div>
+
+
+
