--- a/src/app/common-ui/adverticement-card/adverticement-card.html
+++ b/src/app/common-ui/adverticement-card/adverticement-card.html
@@ -1,13 +1,14 @@
 <div class="card-container" tuiAppearance="floating">
   <div class="adv-image"></div>
 
-  <div class="card-actions">
+  <div class="card-content">
 
-    <div class="card-content">
+    <div class="card-text">
       <h3 class="title">{{advertisement.title}}</h3>
-      <div class="price">{{advertisement.price}}</div>
+      <div class="price">{{advertisement.price}} ₽</div>
     </div>
-    <div class="card-like">
+
+    <div class="card-actions">
       <button
         appearance="positive"
         iconStart="@tui.heart"
