--- a/src/app/common-ui/navbar/navbar.scss
+++ b/src/app/common-ui/navbar/navbar.scss
@@ -17,6 +17,12 @@
   gap: 20px;
 }
 
+.nav-button{
+  color: #1e1e1e;
+  font-size: 14px;
+  font-weight: bold;
+}
+
 .right-buttons{
   display: flex;
   justify-content: space-between;
