--- a/src/app/common-ui/navbar/navbar.html
+++ b/src/app/common-ui/navbar/navbar.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="nav-buttons">
-    <button
+    <button class="nav-button"
       appearance="flat-grayscale"
       tuiButton
       type="button"
@@ -23,7 +23,7 @@
       Главная
     </button>
 
-    <button
+    <button class="nav-button"
       appearance="flat-grayscale"
       tuiButton
       type="button"
@@ -33,7 +33,7 @@
       Лента
     </button>
 
-    <button
+    <button class="nav-button"
       appearance="flat-grayscale"
       tuiButton
       type="button"
@@ -43,7 +43,7 @@
       Объявления
     </button>
 
-    <button
+    <button class="nav-button"
       appearance="flat-grayscale"
       tuiButton
       type="button"
