--- a/src/app/common-ui/navbar/navbar.html
+++ b/src/app/common-ui/navbar/navbar.html
@@ -5,7 +5,7 @@
       appearance="positive"
       tuiButton
       type="button"
-      size="s"
+      size="m"
       iconStart="@tui.map-pin"
     >
       Воронеж
@@ -59,7 +59,7 @@
   <button
     appearance="positive"
     iconStart="@tui.heart"
-    size="s"
+    size="m"
     tuiIconButton
     type="button"
     [style.border-radius.%]="100"
@@ -71,7 +71,7 @@
   <button
     appearance="positive"
     iconStart="@tui.plus"
-    size="s"
+    size="m"
     tuiIconButton
 
     tuiButton
@@ -120,7 +120,7 @@
   <button
     appearance="positive"
     iconStart="@tui.user"
-    size="s"
+    size="m"
     tuiIconButton
 
     tuiButton
