--- a/src/app/pages/advertisements-page/advertisements-page.scss
+++ b/src/app/pages/advertisements-page/advertisements-page.scss
@@ -50,3 +50,15 @@
   flex-direction: column;
 }
 
+.categories-tree{
+  width: 500px;
+
+  font-size: 14px;
+}
+
+.category-button{
+  padding: 5px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
