--- a/src/app/pages/advertisements-page/advertisements-page.html
+++ b/src/app/pages/advertisements-page/advertisements-page.html
@@ -94,7 +94,9 @@
           </div>
         } @else {
           <div class="loading-state">
-            <p>Загрузка объявлений...</p>
+            <tui-loader
+            size="l"
+            />
           </div>
         }
       </div>
