--- a/src/app/pages/advertisements-page/advertisements-page.scss
+++ b/src/app/pages/advertisements-page/advertisements-page.scss
@@ -51,9 +51,8 @@
 }
 
 .categories-tree{
-  width: 500px;
-
-  font-size: 14px;
+  width: 600px;
+  font-size: 18px;
 }
 
 .category-button{
@@ -61,4 +60,15 @@
   border: none;
   background: none;
   cursor: pointer;
+  font-size: 14px;
+}
+
+.category-button:hover {
+  font-weight: bold;
+}
+
+.loading-state{
+  margin-top: 100px;
+  height: 100px;
+  width: 100px;
 }
