--- a/src/app/pages/create/create-advertisement-page/create-advertisement-page.html
+++ b/src/app/pages/create/create-advertisement-page/create-advertisement-page.html
@@ -53,6 +53,8 @@
       </tui-textfield>
     </div>
 
+    <h3>Добавьте до 3 фото:</h3>
+
     @if (!control.value) {
       <label
         tuiInputFiles
