--- a/src/app/pages/advertisements-page/advertisements-page.html
+++ b/src/app/pages/advertisements-page/advertisements-page.html
@@ -89,7 +89,11 @@
         @if (newAdverticements.length > 0) {
           <div class="cards-container">
             @for (ad of newAdverticements; track ad.id) {
-              <app-adverticement-card [advertisement]="ad" />
+              <button
+                class="adv-container"
+              (click)="toAdvertisement(ad.id)">
+                <app-adverticement-card [advertisement]="ad" />
+              </button>
             }
           </div>
         } @else {
