--- a/src/app/pages/create/create-advertisement-page/create-advertisement-page.html
+++ b/src/app/pages/create/create-advertisement-page/create-advertisement-page.html
@@ -3,7 +3,7 @@
     <h1>Создать объявление</h1>
 
     <div>
-      <h3>Название</h3>
+      <h3>Название:</h3>
       <tui-textfield>
         <textarea
           [(ngModel)]="newAdverticement.title"
@@ -14,7 +14,7 @@
     </div>
 
     <div>
-      <h3>Описание</h3>
+      <h3>Описание:</h3>
       <tui-textfield [style.margin-block-end.rem]="1">
         <label tuiLabel>Описание</label>
         <textarea
@@ -28,7 +28,7 @@
     </div>
 
     <div class="input-category">
-      <h3>Выбор категории</h3>
+      <h3>Выбор категории:</h3>
       <tui-textfield tuiChevron>
         <select
           aria-label="Select food"
@@ -55,31 +55,64 @@
 
     <h3>Добавьте до 3 фото:</h3>
 
-    @if (!control.value) {
-      <label
+    <label tuiInputFiles>
+      <input
+        #validator="tuiInputFilesValidator"
+        accept="image/*"
         tuiInputFiles
-      >
-        <input
-          accept="image/*"
-          capture="user"
-          title="Choose files (no limits)"
-          tuiInputFiles
-          [formControl]="control"
-        />
-      </label>
-    }
+        [formControl]="control"
+        [multiple]="true"
+        (reject)="onReject($event)"
+      />
+    </label>
 
-
-    @if (control.valueChanges | async; as file) {
-      <tui-files class="tui-space_top-1">
+    <tui-files class="tui-space_top-1">
+      @for (file of accepted$ | async; track file) {
         <tui-file
           [file]="file"
-          (remove)="removeFile()"
+          (remove)="onRemove(file)"
         />
-      </tui-files>
-    }
+      }
+
+      @for (file of rejected; track file) {
+        <tui-file
+          state="error"
+          [file]="(file | tuiFileRejected: validator | async) || file"
+          (remove)="onRemove(file)"
+        />
+      }
+    </tui-files>
+
+    <tui-error
+      [error]="['maxLength'] | tuiFieldError | async"
+      [formControl]="control"
+    />
 
 
+    <!--    @if (!control.value) {-->
+<!--      <span>Основное изображение:</span>-->
+<!--      <label-->
+<!--        tuiInputFiles-->
+<!--      >-->
+<!--        <input-->
+<!--          accept="image/*"-->
+<!--          capture="user"-->
+<!--          title="Choose files (no limits)"-->
+<!--          tuiInputFiles-->
+<!--          [formControl]="control"-->
+<!--        />-->
+<!--      </label>-->
+<!--    }-->
+
+
+<!--    @if (control.valueChanges | async; as file) {-->
+<!--      <tui-files class="tui-space_top-1">-->
+<!--        <tui-file-->
+<!--          [file]="file"-->
+<!--          (remove)="removeFile()"-->
+<!--        />-->
+<!--      </tui-files>-->
+<!--    }-->
 
     <button class="send-button"
       appearance="positive"
