Сделал странички объявлений

--- a/src/app/common-ui/adverticement-card/adverticement-card.html
+++ b/src/app/common-ui/adverticement-card/adverticement-card.html
@@ -21,16 +21,12 @@
     </div>
 
     <div class="card-actions">
-      <button
+      <input
+        class="heart-button"
+        tuiLike
+        type="checkbox"
         appearance="positive"
-        iconStart="@tui.heart"
-        size="m"
-        tuiIconButton
-        type="button"
-        [style.border-radius.%]="100"
-      >
-        Favorite
-      </button>
+      />
     </div>
 
   </div>
