--- a/src/app/pages/one-advertisement-page/one-advertisement-page.html
+++ b/src/app/pages/one-advertisement-page/one-advertisement-page.html
@@ -7,7 +7,7 @@
       <div class="back-button">
         <button
           appearance="flat-grayscale"
-          iconStart="@tui.move-left"
+          iconStart="@tui.arrow-left"
           size="m"
           tuiIconButton
           type="button"
