--- a/src/app/common-ui/navbar/navbar.html
+++ b/src/app/common-ui/navbar/navbar.html
@@ -1,5 +1,7 @@
 <div class="navbar-container">
 
+  isAuth - {{isAuth()}}
+
   <div class="city">
     <button
       appearance="positive"
@@ -54,9 +56,8 @@
     </button>
   </div>
 
+
 <div class="right-buttons">
-
-
   <button
     appearance="positive"
     iconStart="@tui.heart"
@@ -117,63 +118,81 @@
     </ng-template>
   </button>
 
-  <button
-    appearance="positive"
-    iconStart="@tui.user"
-    size="m"
-    tuiIconButton
+  @if (isAuth()){
+    <button
+      appearance="positive"
+      iconStart="@tui.user"
+      size="m"
+      tuiIconButton
 
-    tuiButton
-    tuiChevron
-    type="button"
-    [tuiDropdown]="dropdownContentProfile"
-    [tuiDropdownManual]="openProfile"
-    [tuiObscuredEnabled]="openProfile"
-    (click)="onClickProfile ()"
-    (tuiActiveZoneChange)="onActiveZoneProfile($event)"
-    (tuiObscured)="onObscuredProfile($event)"
-  >
-    Choose
-    <ng-template #dropdownContentProfile>
-      <div class="dropdown-buttons">
-        <button
-          class="profile-button"
-          appearance="flat-grayscale"
-          tuiButton
-          type="button"
-          size="s"
-          iconStart="@tui.user"
-          (click)="toProfilePage()"
-        >
-          Профиль
-        </button>
+      tuiButton
+      tuiChevron
+      type="button"
+      [tuiDropdown]="dropdownContentProfile"
+      [tuiDropdownManual]="openProfile"
+      [tuiObscuredEnabled]="openProfile"
+      (click)="onClickProfile ()"
+      (tuiActiveZoneChange)="onActiveZoneProfile($event)"
+      (tuiObscured)="onObscuredProfile($event)"
+    >
+      Choose
+      <ng-template #dropdownContentProfile>
+        <div class="dropdown-buttons">
+          <button
+            class="profile-button"
+            appearance="flat-grayscale"
+            tuiButton
+            type="button"
+            size="s"
+            iconStart="@tui.user"
+            (click)="toProfilePage()"
+          >
+            Профиль
+          </button>
 
-        <button
-          class="profile-button"
-          appearance="flat-grayscale"
-          tuiButton
-          type="button"
-          size="s"
-          iconStart="@tui.layout-list"
-          (click)="toMyTasksPage()"
-        >
-          Мои заказы
-        </button>
+          <button
+            class="profile-button"
+            appearance="flat-grayscale"
+            tuiButton
+            type="button"
+            size="s"
+            iconStart="@tui.layout-list"
+            (click)="toMyTasksPage()"
+          >
+            Мои заказы
+          </button>
 
-        <button
-          class="profile-button"
-          appearance="flat-destructive"
-          tuiButton
-          type="button"
-          size="s"
-          iconStart="@tui.log-out"
-          (click)="toMainPage()"
-        >
-          Выйти
-        </button>
-      </div>
-    </ng-template>
-  </button>
+          <button
+            class="profile-button"
+            appearance="flat-destructive"
+            tuiButton
+            type="button"
+            size="s"
+            iconStart="@tui.log-out"
+            (click)="logout()"
+          >
+            Выйти
+          </button>
+        </div>
+      </ng-template>
+    </button>
+  } @else {
+    <button
+      appearance="positive"
+      iconStart="@tui.log-in"
+      size="m"
+      tuiIconButton
+
+      tuiButton
+      tuiChevron
+      type="button"
+      [style.border-radius.%]="100"
+      (click)="toLoginPage()"
+    >
+      Favorite
+    </button>
+  }
+
 </div>
 
 </div>
