--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -1,1 +1,59 @@
-<p>profile-page works!</p>
+<div class="main-container">
+  <div class="profile-container">
+    <h1>Профиль:</h1>
+
+    <div class="header">
+      <tui-avatar
+        src="@tui.user"
+        size="xxl"
+      />
+
+      <div class="header-info">
+        <h1>{{user.fio}}</h1>
+
+        <label>
+          <tui-rating
+            class="rating"
+            icon="@tui.star-filled"
+            [max]="5"
+            [ngModel]="user.rating"
+            [readOnly]="true"
+          />
+        </label>
+      </div>
+    </div>
+
+    <div class="advertisements-card">
+      <h1>Объявления:</h1>
+      <div class="advertisement-container">
+        @if (advertisements.length > 0) {
+          <div class="cards-container">
+            @for (ad of advertisements; track ad.id) {
+              <div
+                (click)="toAdvertisement(ad.id)">
+                <app-adverticement-card
+                  [advertisement]="ad"
+                />
+              </div>
+            }
+
+          </div>
+        } @else {
+          <div class="loading-state">
+            <tui-loader
+              size="l"
+            />
+          </div>
+        }
+
+      </div>
+
+  </div>
+
+</div>
+  <tui-pagination class="pagination"
+                  [index]="index"
+                  [length]="length"
+                  (indexChange)="goToPage($event)"
+  />
+</div>
