--- a/src/app/pages/login-register-page/register-page/register-page.html
+++ b/src/app/pages/login-register-page/register-page/register-page.html
@@ -44,16 +44,48 @@
         </tui-textfield>
       </div>
 
-<!--      <div class="input-login">-->
-<!--        <h3>Аватарка:</h3>-->
-<!--        <tui-textfield>-->
-<!--        <textarea-->
-<!--          [(ngModel)]="register.avatar"-->
-<!--          placeholder="Введите ваш пароль:"-->
-<!--          tuiTextarea-->
-<!--        ></textarea>-->
-<!--        </tui-textfield>-->
-<!--      </div>-->
+    @if (!control.value) {
+      <label tuiInputFiles>
+        <input
+          accept="image/*"
+          tuiInputFiles
+          [formControl]="control"
+        />
+      </label>
+    }
+
+    <tui-files class="tui-space_top-1">
+      @if (control.value | tuiFileRejected: {accept: 'image/*'} | async; as file) {
+        <tui-file
+          state="error"
+          [file]="file"
+          (remove)="removeFile()"
+        />
+      }
+
+      @if (loadedFiles$ | async; as file) {
+        <tui-file
+          [file]="file"
+          (remove)="removeFile()"
+        />
+      }
+
+      @if (failedFiles$ | async; as file) {
+        <tui-file
+          state="error"
+          [file]="file"
+          (remove)="removeFile()"
+        />
+      }
+
+      @if (loadingFiles$ | async; as file) {
+        <tui-file
+          state="loading"
+          [file]="file"
+          (remove)="removeFile()"
+        />
+      }
+    </tui-files>
 
 
     <button class="send-button"
