--- a/src/app/common-ui/adverticement-card/adverticement-card.html
+++ b/src/app/common-ui/adverticement-card/adverticement-card.html
@@ -28,15 +28,18 @@
     </div>
 
     <div class="card-actions">
-      <input
-        class="heart-button"
-        tuiLike
-        type="checkbox"
-        appearance="positive"
-        [(ngModel)]="liked"
-        (click)="addToFavourites()"
-      />
-      {{liked}}
+<!--      <input-->
+<!--        class="heart-button"-->
+<!--        tuiLike-->
+<!--        type="checkbox"-->
+<!--        appearance="positive"-->
+<!--        [(ngModel)]="liked"-->
+<!--        (click)="addToFavourites()"-->
+<!--      />-->
+      <app-like-button
+        [advertisement]="advertisement"
+        [favouriteAdvertisements]="favouriteAdvertisements"
+      ></app-like-button>
     </div>
 
   </div>
