--- a/src/app/pages/advertisements-page/advertisements-page.html
+++ b/src/app/pages/advertisements-page/advertisements-page.html
@@ -92,7 +92,10 @@
               <div
                 class="adv-container">
 
-                <app-adverticement-card [advertisement]="ad" />
+                <app-adverticement-card
+                  [advertisement]="ad"
+                  [favouriteAdvertisements]="favouriteAdvertisements"
+                />
               </div>
             }
           </div>
