--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -31,6 +31,16 @@
       </div>
     </div>
 
+    <div class="reviews-container">
+      <h1>Отзывы:</h1>
+      <div class="review-cards-container">
+        <app-review-card
+        [reviews]="reviews"
+        ></app-review-card>
+      </div>
+
+    </div>
+
     <div class="advertisements-card">
       <h1>Объявления:</h1>
       <div class="advertisement-container">
