--- a/src/app/common-ui/navbar/navbar.html
+++ b/src/app/common-ui/navbar/navbar.html
@@ -13,7 +13,7 @@
 
   <div class="nav-buttons">
     <button class="nav-button"
-      appearance="flat-grayscale"
+      appearance="action-grayscale"
       tuiButton
       type="button"
       size="s"
@@ -23,7 +23,7 @@
     </button>
 
     <button class="nav-button"
-      appearance="flat-grayscale"
+      appearance="action-grayscale"
       tuiButton
       type="button"
       size="s"
@@ -33,7 +33,7 @@
     </button>
 
     <button class="nav-button"
-      appearance="flat-grayscale"
+      appearance="action-grayscale"
       tuiButton
       type="button"
       size="s"
@@ -43,7 +43,7 @@
     </button>
 
     <button class="nav-button"
-      appearance="flat-grayscale"
+      appearance="action-grayscale"
       tuiButton
       type="button"
       size="s"
