--- a/src/app/common-ui/navbar/navbar.scss
+++ b/src/app/common-ui/navbar/navbar.scss
@@ -18,9 +18,11 @@
 }
 
 .nav-button{
-  color: #1e1e1e;
-  font-size: 14px;
-  font-weight: bold;
+  //color: rgb(110, 110, 110) !important;
+  font-size: 18px !important;
+  font-weight: 500 !important;
+  height: 50px !important;
+  border-radius: 12px;
 }
 
 .right-buttons{
