--- a/src/app/common-ui/map-card/map-card.html
+++ b/src/app/common-ui/map-card/map-card.html
@@ -4,15 +4,21 @@
     tuiAppearance="floating"
     tuiCardLarge
   >
-    <section>
-      <iframe
-        height="450"
-        loading="lazy"
-        src="https://yandex.ru/map-widget/v1/?um=constructor%3A0ff7188173ceeea1b3c1d5b2ebeaca63ceb70dc60ebc79513c51bb855356a6ac&amp;source=constructor"
-        title="map"
-        width="100%"
-        class="map"
-      ></iframe>
-    </section>
+    <div class="container">
+
+    </div>
+
   </div>
 </div>
+
+<y-map
+  [props]="{
+      location: {
+        center: [-0.127696, 51.507351],
+        zoom: 10,
+      },
+      theme: 'dark',
+    }"
+>
+  <y-map-default-scheme-layer />
+</y-map>
